# Data-Mining

./: .env.example  .gitattributes  .gitignore  README.md  requirements.txt
Ass/: check_db.py  (+1 more)
Ass/admission-crawler/: .gitignore  README.md  pyproject.toml
Ass/admission-crawler/configs/: default.yaml  development.yaml  production.yaml
Ass/admission-crawler/scripts/: fetch_fixtures.py
Ass/admission-crawler/src/admission_crawler/: cli.py  config.py  constants.py
Ass/admission-crawler/src/admission_crawler/discovery/: pagination.py  university_discovery.py  year_index.py
Ass/admission-crawler/src/admission_crawler/http/: cache.py  circuit_breaker.py  client.py  rate_limiter.py  retry_policy.py  robots.py
Ass/admission-crawler/src/admission_crawler/normalization/: admission_method.py  major.py  score.py  subject_combination.py  text.py  university.py
Ass/admission-crawler/src/admission_crawler/parsers/: common.py  index_parser.py  table_detector.py  university_parser.py
Ass/admission-crawler/src/admission_crawler/pipeline/: crawl_pipeline.py  discover_pipeline.py  export_pipeline.py  normalize_pipeline.py
Ass/admission-crawler/src/admission_crawler/reporting/: quality_report.py  run_report.py
Ass/admission-crawler/src/admission_crawler/storage/: database.py  models.py  raw_html_store.py  repositories.py
Ass/admission-crawler/src/data/: crawler.db
Ass/admission-crawler/tests/: test_deduplication.py  test_index_parser.py  test_method_classifier.py  test_pagination.py  test_score_parser.py  test_university_parser.py
docs/: 00_Project_Overview.md  (+14 more)
(+88 files in other folders)
